Upgraded code for Spring Boot 2.1.10, PCF 2.7.4 and MySQL for PCF v2

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = "1.5.17.RELEASE"
+        springBootVersion = "2.1.10.RELEASE"
     }
 
     repositories {
@@ -15,7 +15,7 @@ buildscript {
 plugins {
     id 'java'
     id 'war'
-    id 'org.springframework.boot' version '1.5.17.RELEASE'
+    id 'org.springframework.boot' version '2.1.10.RELEASE'
 }
 
 group 'com.example'
@@ -30,15 +30,15 @@ repositories {
 dependencies {
     compile('taglibs:standard:1.1.2')
     compile('javax.servlet:jstl:1.2')
-    compile('org.apache.tomee:javaee-api:7.0')
+    compile('org.apache.tomee:javaee-api:8.0')
     compile('org.apache.tomcat.embed:tomcat-embed-jasper:8.5.6')
     compile('org.apache.geronimo.specs:geronimo-osgi-locator:1.1')
     compile('org.apache.geronimo.components:geronimo-jaspi:2.0.0')
-    
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.boot:spring-boot-starter-tomcat')
-    compile('mysql:mysql-connector-java:5.1.46')
+
+    compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
+    compile('mysql:mysql-connector-java:8.0.18')
     compile('commons-lang:commons-lang:2.4')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
 }
