Upgraded code to Spring Boot 2.1.10, PCF 2.7.4 and MySQL for PCF v2

--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,6 @@ applications:
 - name: mediabase
   path: applications/mediabase/build/libs/mediabase-1.0-SNAPSHOT.war
   routes:
-  - route: <initials>-mediabase.apps.pcf.paltraining.perficient.com
+  - route: <initials>-mediabase.apps.pcf.cpstraining.perficient.com
   services:
   - media-database
