--- a/applications/movies-ms/build.gradle
+++ b/applications/movies-ms/build.gradle
@@ -4,15 +4,15 @@ apply plugin: 'org.springframework.boot'
 
 group 'com.example'
 version '1.0-SNAPSHOT'
-description 'Movies Mircoservice'
+description 'Movies Microservice'
 
 dependencies {
     compile project(":components:movies")
     
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.boot:spring-boot-starter-tomcat')
-    compile('mysql:mysql-connector-java:5.1.46')
+    compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
+    compile('mysql:mysql-connector-java:8.0.18')
     compile('commons-lang:commons-lang:2.4')
 
 }
