--- a/applications/movies-ms/src/main/resources/application.yml
+++ b/applications/movies-ms/src/main/resources/application.yml
@@ -3,8 +3,7 @@ server.port: 8081
 spring:
   jpa:
     generate-ddl: true
-    properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+    properties.hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
 
   datasource:
-    url: jdbc:mysql://localhost:3306/movies?useSSL=false
-    username: root
+    url: jdbc:mysql://localhost:3306/movies?useSSL=false&user=root&password=password
