--- a/applications/podcasts-ms/build.gradle
+++ b/applications/podcasts-ms/build.gradle
@@ -16,12 +16,11 @@ dependencyManagement {
 
 dependencies {
     compile project(":components:podcasts")
-    
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.boot:spring-boot-starter-tomcat')
-    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
-    compile('mysql:mysql-connector-java:5.1.46')
-    compile('commons-lang:commons-lang:2.4')
 
+    compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
+    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+    compile('mysql:mysql-connector-java:8.0.18')
+    compile('commons-lang:commons-lang:2.4')
 }
