--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
-        springBootVersion = "1.5.17.RELEASE"
-        SCSClientStartersVersion = "1.6.6.RELEASE"
-        SCVersion="Edgware.RELEASE"
+        springBootVersion = "2.1.10.RELEASE"
+        SCSClientStartersVersion = "2.1.2.RELEASE"
+        SCVersion="Greenwich.SR4"
     }
 
     repositories {
@@ -10,7 +10,8 @@ buildscript {
     }
 
     dependencies {
-        classpath('io.spring.gradle:dependency-management-plugin:1.0.5.RELEASE')
+        classpath('io.spring.gradle:dependency-management-plugin:1.0.7.RELEASE')
         classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
     }
 }
+
