--- a/applications/movies-ms/build.gradle
+++ b/applications/movies-ms/build.gradle
@@ -15,15 +15,15 @@ dependencyManagement {
 }
 
 dependencies {
-    compile project(':components:movies')
-    
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile "org.springframework.cloud:spring-cloud-starter-oauth2"
-    compile "io.pivotal.spring.cloud:spring-cloud-sso-connector:$SCSSOVersion"
-    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+    compile project(":components:movies")
 
-    compile('mysql:mysql-connector-java:5.1.46')
+    compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
+    compile("org.springframework.cloud:spring-cloud-starter-oauth2")
+    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+    compile("io.pivotal.spring.cloud:spring-cloud-sso-connector:$SCSSOVersion")
+    compile('mysql:mysql-connector-java:8.0.18')
     compile('commons-lang:commons-lang:2.4')
 
 }
