--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,7 @@ applications:
 - name: movies-ms
   path: applications/movies-ms/build/libs/movies-ms-1.0-SNAPSHOT.jar
   routes:
-  - route: <initials>-movies-ms.apps.pcf.paltraining.perficient.com
+  - route: gf-movies-ms.apps.pcf.cpstraining.perficient.com
   services:
   - movies-ms-database
   - service-registry
@@ -13,7 +13,7 @@ applications:
 - name: podcasts-ms
   path: applications/podcasts-ms/build/libs/podcasts-ms-1.0-SNAPSHOT.jar
   routes:
-  - route: <initials>-podcasts-ms.apps.pcf.paltraining.perficient.com
+  - route: gf-podcasts-ms.apps.pcf.cpstraining.perficient.com
   services:
   - podcasts-ms-database
   - service-registry
@@ -23,9 +23,8 @@ applications:
 - name: mediabase
   path: applications/mediabase/build/libs/mediabase-1.0-SNAPSHOT.war
   routes:
-  - route: <initials>-mediabase.apps.pcf.paltraining.perficient.com
+  - route: gf-mediabase.apps.pcf.cpstraining.perficient.com
   services:
   - service-registry
   - circuit-breaker
   - mediabase-sso
-
