--- a/build.gradle
+++ b/build.gradle
@@ -8,15 +8,15 @@ buildscript {
     }
 
     dependencies {
+        classpath('io.spring.gradle:dependency-management-plugin:1.0.8.RELEASE')
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
     }
 }
 
-plugins {
-    id 'java'
-    id 'war'
-    id 'org.springframework.boot' version '2.1.10.RELEASE'
-}
+apply plugin: 'java'
+apply plugin: 'war'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group 'com.example'
 version '1.0-SNAPSHOT'
@@ -35,10 +35,10 @@ dependencies {
     compile('org.apache.geronimo.specs:geronimo-osgi-locator:1.1')
     compile('org.apache.geronimo.components:geronimo-jaspi:2.0.0')
 
-    compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-tomcat')
     compile('mysql:mysql-connector-java:8.0.18')
     compile('commons-lang:commons-lang:2.4')
-    testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
