--- a/applications/mediabase/build.gradle
+++ b/applications/mediabase/build.gradle
@@ -2,6 +2,7 @@ apply from: "../../common.gradle"
 
 apply plugin: 'war'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group 'com.example'
 version '1.0-SNAPSHOT'
@@ -17,8 +18,8 @@ dependencies {
     compile('org.apache.geronimo.specs:geronimo-osgi-locator:1.1')
     compile('org.apache.geronimo.components:geronimo-jaspi:2.0.0')
 
-    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-tomcat')
 
-    testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
