--- a/applications/mediabase/build.gradle
+++ b/applications/mediabase/build.gradle
@@ -2,7 +2,7 @@ apply from: "../../common.gradle"
 
 apply plugin: 'war'
 apply plugin: 'org.springframework.boot'
-apply plugin: "io.spring.dependency-management"
+apply plugin: 'io.spring.dependency-management'
 
 group 'com.example'
 version '1.0-SNAPSHOT'
@@ -22,12 +22,9 @@ dependencies {
     compile('javax.servlet:jstl:1.2')
     compile('org.apache.tomcat.embed:tomcat-embed-jasper:8.5.6')
 
-    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
-
-    testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-tomcat')
     compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
     
     testCompile('org.springframework.boot:spring-boot-starter-test')
-
 }
