--- a/applications/podcasts-ms/build.gradle
+++ b/applications/podcasts-ms/build.gradle
@@ -1,7 +1,7 @@
 apply from: "../../common.gradle"
 
 apply plugin: 'org.springframework.boot'
-apply plugin: "io.spring.dependency-management"
+apply plugin: 'io.spring.dependency-management'
 
 group 'com.example'
 version '1.0-SNAPSHOT'
@@ -17,9 +17,9 @@ dependencyManagement {
 dependencies {
     compile project(":components:podcasts")
 
-    compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-tomcat')
     compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
     compile('mysql:mysql-connector-java:8.0.18')
     compile('commons-lang:commons-lang:2.4')
