Added spring dependency management to simplify build files.

--- a/applications/mediabase/build.gradle
+++ b/applications/mediabase/build.gradle
@@ -22,13 +22,13 @@ dependencies {
     compile('javax.servlet:jstl:1.2')
     compile('org.apache.tomcat.embed:tomcat-embed-jasper:8.5.6')
 
-    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
-    compile("org.springframework.cloud:spring-cloud-starter-oauth2")
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-tomcat')
+    compile('org.springframework.cloud:spring-cloud-starter-oauth2')
     compile("io.pivotal.spring.cloud:spring-cloud-sso-connector:$SCSSOVersion")
     compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
     compile('io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker')
 
-    testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 
 }
