--- a/applications/podcasts-ms/build.gradle
+++ b/applications/podcasts-ms/build.gradle
@@ -17,10 +17,10 @@ dependencyManagement {
 dependencies {
     compile project(":components:podcasts")
 
-    compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
-    compile("org.springframework.cloud:spring-cloud-starter-oauth2")
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-tomcat')
+    compile('org.springframework.cloud:spring-cloud-starter-oauth2')
     compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
     compile("io.pivotal.spring.cloud:spring-cloud-sso-connector:$SCSSOVersion")
     compile('mysql:mysql-connector-java:8.0.18')
